<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/exit_message"
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:padding="32dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/c"
            android:text="@string/no_exit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/yes_exit"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/o"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>