<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:padding="32dp"
        android:text="@string/event_create_dialog_explain"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/hint_event_descripton"
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:text="@string/end_of_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:padding="@dimen/padding"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/no1"
            android:text="@android:string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content" />
        <Button
            android:text="@android:string/ok"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/ok1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>