<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="@dimen/padding"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:layout_height="wrap_content">

        <TextView
            android:padding="@dimen/padding"
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/icon1"
            android:src="@drawable/porcupic1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@null" />
    </LinearLayout>
    <View
        android:background="#ffff8800"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/poke_ll"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/poke_count"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            </FrameLayout>
        <Button
            android:padding="32dp"
            android:text="@string/button_poke"
            android:id="@+id/poke_sent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/flare_dis"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ProgressBar
                    android:id="@+id/prg_fl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>
        <Button
            android:padding="32dp"
            android:text="@string/button_flare"
            android:id="@+id/flare_send"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/nev"
            android:padding="@dimen/padding"
            android:text="@string/nevigate_menu"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>